--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "server": "nodemon app.js"
   },
   "author": "rakesh",
   "license": "ISC",
