--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node app.js",
-    "server": "nodemon app.js"
+    "start": "node server/app.js",
+    "server": "nodemon server/app.js"
   },
   "author": "rakesh",
   "license": "ISC",
