--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server/app.js",
-    "server": "nodemon server/app.js"
+    "dev": "nodemon server/app.js"
   },
   "author": "rakesh",
   "license": "ISC",
